// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay Component base should return an Overlay Component object 1`] = `
<div
  className="DayPickerInput-OverlayWrapper"
>
  <div
    className="DayPickerInput-OverlayWrapper--Offset"
  >
    I am an overlay component.
  </div>
</div>
`;

exports[`Overlay Component base should return an Overlay Component with position set to relative 1`] = `
<div
  className="DayPickerInput-OverlayWrapper"
>
  <div
    className="DayPickerInput-OverlayWrapper--Offset"
  >
    I am relative.
  </div>
</div>
`;
